--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -11,6 +11,9 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+
   <title>React App</title>
 </head>
 
@@ -19,5 +22,13 @@
   <div id="root"></div>
 
 </body>
+
+<script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+
+<script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
+
+<script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
+
+<script>var Alert = ReactBootstrap.Alert;</script>
 
 </html>
